2010-01-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/pchart_graph.php
	* include/functions_visual_map.php: Removed blank spaces when graphs are resized 
	in Visual console.

2010-01-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_visual_map.php: Changed the way of create marks 
	for graphs in visual console from divs to tables. Label parameter is 
	now coded in base 64 codification when pgraph.php page is requested. 

	Fixes bug #3152661, #3152673
	
	* include/fgraph.php: Decode received parameter (label) in base 64 codification.

	* godmode/reporting/visual_console_builder.editor.js: In Visual console builder editor 
	added some image borders to create marks around graphs.

	Fixes bug #3152673

	* operation/agentes/stat_win.php
	godmode/reporting/graph_builder.preview.php: Label parameter is now coded 
	in base 64 format when pgraph.php page is requested.

	Fixes bug #3152661

2010-01-10 Javier Lanz <javier.lanz@artica.es>
	* godmode/agentes/module_manager.php: Fixed some truncate problems with module name

	Fixes bug #3138420

2010-01-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pchart_graph.php: Remove axis values and legend in small graphs.
	* functions_visual_map.php: Added marks (div borders) for beautify visual console graphs.
	* fgraph.php: Dont show caption graphs in small graphs.
	* functions.php: Added constants for visual console.

	Fixes bug #3152673.

2010-01-07  Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandora_console_upgrade: Changed permissions in this file to make it executable by default.

	Fixes bug #3146314.

2010-12-28  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Fixed link for current documentation page at 
	openideas.info Wiki.

	* operation/agentes/graphs.php: Removed divs which makes the empty graphs
	render badly.

2010-12-27  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql, include/config_process.php: Updated
	  version strings for the 3.2 release.
