@@ -1,3 +1,14 @@
+2010-01-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* godmode/reporting/visual_console_builder.editor.js: Label parameter is now coded 
+	in base 64 format when pgraph.php page is requested. 
+	
+	* godmode/reporting/visual_console_builder.editor.php: Added a javascript include.
+
+	* include/javascript/encode_decode_base64.js: Added new javascript function for base 64 encoding/decoding.  
+
+	Fixes bug #3152661, #3147119
+
 2010-01-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/pchart_graph.php
